Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_BatchConfiguration__mdt/fields/ErrorEmailRecipients__c.field-meta.xml
<CustomField>
    <fullName>ErrorEmailRecipients__c</fullName>
    <description>Recipient list for error emails.</description>
    <inlineHelpText>Separate with comma.</inlineHelpText>
    <label>Error Email Recipients</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>