Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_BatchConfiguration__mdt/fields/QuerySize__c.field-meta.xml
<CustomField>
    <fullName>QuerySize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Size of the query.</description>
    <label>Query Size</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>