Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_BatchConfiguration__mdt/fields/SendErrorEmail__c.field-meta.xml
<CustomField>
    <fullName>SendErrorEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, sends error email to Error Email Recipients</description>
    <label>Send Error Email</label>
    <type>Checkbox</type>
</CustomField>