Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_BatchConfiguration__mdt/fields/SendSuccessEmail__c.field-meta.xml
<CustomField>
    <fullName>SendSuccessEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, send success email.</description>
    <label>Send Success Email</label>
    <type>Checkbox</type>
</CustomField>