Design-Architecture-Advisory-Board-develop/salesforce-order-management-template/force-app/main/default/objects/SOM_BatchConfiguration__mdt/validationRules/ValidateSuccessEmailRecipientsList.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateSuccessEmailRecipientsList</fullName>
    <active>false</active>
    <errorConditionFormula>NOT (
				REGEX (
								SuccessEmailRecipients__c,
								&quot;([A-Za-z0-9]+([!#$%&amp;&apos;*+-/=?^_`{|}~]*[A-Za-z0-9]+)*@[A-Za-z0-9\\-]+(\\.[A-Za-z0-9\\-]+)*[ ]*[,;]?[ ]*)+&quot;
    )
)</errorConditionFormula>
    <errorDisplayField>SuccessEmailRecipients__c</errorDisplayField>
    <errorMessage>Invalid Email Recipients.</errorMessage>
</ValidationRule>